# GNOME.Sign

./: README.md  build_flatpak.sh  gnomesign-launcher.sh  io.github.ppgllrd.GNOME-Sign.desktop  io.github.ppgllrd.GNOME-Sign.json  io.github.ppgllrd.GNOME-Sign.metainfo.xml  meson.build  meson_options.txt  org.pepeg.GnomeSign.desktop  org.pepeg.GnomeSign.json  org.pepeg.GnomeSign.metainfo.xml  python-modules.json  requirements.txt  test.py
po/: POTFILES  es.po  gnomesign.pot  meson.build
po/es/LC_MESSAGES/: gnomesign.mo
src/: certificate_manager.py  config_manager.py  i18n.py  main.py  meson.build  stamp_creator.py
src/ui/: app_window.py  dialogs.py  preferences_window.py  stamp_editor_dialog.py  stamp_editor_window.py
src/ui/components/: sidebar.py  welcome.py
